--- a/contact.html
+++ b/contact.html
@@ -101,7 +101,7 @@
 		<!--Footer Section-->
 		<nav id="footer" class="keep-footer-down">
 			<div class="footer-nav">
-				<p> Copyright © 2023.  Produced by<a href="https://ca.linkedin.com/in/oleh-hodovaniuk-93b62411b" target="_blank"> Oleh Hodovaniuk</a></p>
+				<p> Copyright © 2023.  Produced by<a href="https://ca.linkedin.com/in/-Mikaiel Hashimvaniuk-93b62411b" target="_blank">  Mikaiel Hashimvaniuk</a></p>
 			</div>
 		</nav>
 		
